Creato con Colaboratory

--- a/R_code_variability.ipynb
+++ b/R_code_variability.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_variability.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNnJSIQRtBrl1ozch3lAYFO"
+      "authorship_tag": "ABX9TyNVe9MwVZ6IlDuslCxumAci"
     },
     "kernelspec": {
       "name": "ir",
@@ -41,7 +41,9 @@
         "The spatial frequency therefore indicates the rate of change of the DNs that make up an image:\n",
         "low frequencies correspond to slow variations (mostly homogeneous surfaces), sudden variations of these values correspond to high frequencies (discontinuity between surfaces with different characteristics), while images for which the numerical value of the pixels is constant corresponds to zero spatial frequency.\n",
         "\n",
-        "The spectral heterogeneity measurements of a remote sensing landscape represent a valid alternative to categorical land cover maps, especially in the case of non-homogeneous and complex landscape configurations."
+        "The spectral heterogeneity measurements of a remote sensing landscape represent a valid alternative to categorical land cover maps, especially in the case of non-homogeneous and complex landscape configurations.\n",
+        "\n",
+        "![](https://www.meranerland.org/images/cms/main/754x435/B-IMG_1174-Meraner-Hoehenweg-Nord_Richtung-Similaun.JPG)"
       ]
     },
     {
